2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Define SIZE_MAX and inline.

2003-11-28  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.def: Add at_fatal_signal, block_fatal_signals,
	unblock_fatal_signals, _obstack_begin, _obstack_free,
	_obstack_newchunk.
	* windows/gettextsrc.def: Add message_print_syntax_stringtable.

2003-11-16  Bruno Haible  <bruno@clisp.org>

	* configure.ac (man/Makefile): Postprocess with FIX_MAKEFILE_DISTRIB.

2003-11-16  Bruno Haible  <bruno@clisp.org>

	* windows/gettextpo.rc: Bump version number to 0.13.

2003-11-15  Bruno Haible  <bruno@clisp.org>

	* configure.ac (AC_CONFIG_FILES): Create examples/Makefile,
	examples, installpaths, examples/po/Makefile.
	* Makefile.am (SUBDIRS): Add examples.
	* Makefile.msvc (all, install, installdirs, uninstall, check,
	mostlyclean, clean, distclean, maintainer-clean): Recurse into
	examples.
	* Makefile.vms (all, install, installdirs, uninstall, check,
	mostlyclean, clean, distclean, maintainer-clean): Recurse into
	examples.

2003-11-13  Bruno Haible  <bruno@clisp.org>

	* configure.ac (docdir): New variable.

2003-11-05  Bruno Haible  <bruno@clisp.org>

	* configure.ac (localedir): New variable.
	(src/user-email): Generate from src/user-email.sh.in.

2003-11-04  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_XSIZE.

2003-10-31  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Also check for waitid.

2003-10-31  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Remove argument of FIX_MAKEFILE_COMPILE,
	FIX_MAKEFILE_DISTRIB, FIX_MAKEFILE_INFO.

2003-10-07  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Drop PARAMS definition from config.h.in.

2003-10-08  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gt_SIG_ATOMIC_T.
	* Makefile.am (config.h_vms, config.h.msvc): Define HAVE_SIG_ATOMIC_T.

2003-10-04  Bruno Haible  <bruno@clisp.org>
