@@ -1,3 +1,7 @@
+2003-12-02  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Invoke FIX_MAKEFILE_DISTRIB for examples/Makefile.
+
 2003-11-30  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.13 released.
